# scraprr

./: README.md  scraprr_analysis.ipynb
scrapr-bindings/: Cargo.toml
scrapr-bindings/src/: lib.rs  protocols.rs  url.rs
scrapr-core/: Cargo.toml
scrapr-core/src/: request.rs
scraprr/: Cargo.toml  build.rs
scraprr/tests/: url.rs
