[package]
name = "scrapr-bindings"
version = "0.1.1"
edition = "2024"
description = "A Rust web scraping library for Python"
authors = ["Dariush Ghassemieh <dariush@ghassemieh.com>"]
license = "MIT"
repository = "https://github.com/dariush-g/scraprr"
homepage = "https://github.com/dariush-g/scraprr"
categories = ["web-programming", "parsing"]
keywords = ["scraping", "html", "parser", "web"]


[dependencies]
native-tls = { workspace = true }
# pyo3 = { version = "0.25.1", features = ["extension-module"] }
scrapr-core = "0.1.0"

[lib]
name = "scrapr_bindings"
crate-type = ["cdylib", "rlib"]
path = "src/lib.rs"

[package.metadata.maturin]
name = "scrapr"

[dependencies.pyo3]
version = "0.25"
features = ["auto-initialize", "extension-module"] # "test"
