[package]
name = "scrapr-core"
version = "0.1.1"
edition = "2024"
description = "A Rust web scraping library for Python"
authors = ["Dariush Ghassemieh <dariush@ghassemieh.com>"]
license = "MIT"
repository = "https://github.com/dariush-g/scraprr"
homepage = "https://github.com/dariush-g/scraprr"
categories = ["web-programming", "parsing"]
keywords = ["scraping", "html", "parser", "web"]


[dependencies]
anyhow.workspace = true
native-tls = { workspace = true }

[lib]
name = "scrapr_core"
path = "src/lib.rs"
crate-type = ["rlib"]
