[package]
name = "scraprr"
version = "0.1.3"
edition = "2024"
description = "A Rust web scraping library for Python"
authors = ["Dariush Ghassemieh <dariush@ghassemieh.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/dariush-g/scraprr"
homepage = "https://github.com/dariush-g/scraprr"
documentation = "https://docs.rs/scraprr-core"
categories = ["web-programming", "parsing"]
keywords = ["scraping", "html", "parser", "web"]

[dependencies]
scrapr-bindings = "0.1.0"
scrapr-core = "0.1.0"
pyo3 = { version = "0.25.1", features = ["extension-module"] }


[lib]
name = "scraprr"
crate-type = ["rlib", "cdylib"]
path = "src/lib.rs"
